# grpc-chat

./: .gitignore  LICENSE  Makefile  README.md  client_ui.py  pyproject.toml  requirements.txt  server.py  start_client_gui.py  start_server.py
grpc_chat/: __init__.py  client.py  server.py  start_client_gui.py  start_server.py
grpc_chat/proto/: chat.proto
scripts/: start_client.bat  start_client.sh  start_server.bat  start_server.sh  test_server.py
